--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>List of films page 1</h1>
+    <section class="container">
+       
+    </section>
+   
+   
 </body>
+<script src="script.js"> </script>
 </html>
