ajout de bouttons por rechercher les films par type

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>films</title>
 </head>
 <body>
+    <div class="btns">
+        <button class="popular">Popular movies</button>
+        <button class="rated">Rated movies</button>
+        <button class="upcoming">Upcoming movies</button>
+    </div>
+    
     <h1>List of films page 1</h1>
     <section class="container">
        
