--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>films</title>
 </head>
 <body>
-    <div class="modal"></div>
+    <div class="modal">
+        
+    </div>
     <div class="fixed">
         <div class="btns">
             <button class="popular">Popular movies</button>
